log
Wed 04 Oct 2023 04:50:47 PM UTC: 
 sudoku.c | 98 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 89 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:89:17: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   89 |                 pushback(list, adj_node);
      |                 ^~~~~~~~
      |                 pushBack
sudoku.c: In function ‘DFS’:
sudoku.c:135:17: error: unused variable ‘adj_node’ [-Werror=unused-variable]
  135 |           Node* adj_node = front(adj_nodes);
      |                 ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:148:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  148 | int main( int argc, char *argv[] )
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ecf1033
Wed 04 Oct 2023 04:51:18 PM UTC: 
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:89:17: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   89 |                 pushback(list, adj_node);
      |                 ^~~~~~~~
      |                 pushBack
sudoku.c: In function ‘DFS’:
sudoku.c:135:17: error: unused variable ‘adj_node’ [-Werror=unused-variable]
  135 |           Node* adj_node = front(adj_nodes);
      |                 ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:148:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  148 | int main( int argc, char *argv[] )
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5d395ce
Wed 04 Oct 2023 04:52:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:135:17: error: unused variable ‘adj_node’ [-Werror=unused-variable]
  135 |           Node* adj_node = front(adj_nodes);
      |                 ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:148:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  148 | int main( int argc, char *argv[] )
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0338ee2
Wed 04 Oct 2023 04:55:02 PM UTC: 
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:135:17: error: unused variable ‘adj_node’ [-Werror=unused-variable]
  135 |           Node* adj_node = front(adj_nodes);
      |                 ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:148:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  148 | int main( int argc, char *argv[] )
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
26a4f93
Wed 04 Oct 2023 04:56:41 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:17: error: unused variable ‘adj_node’ [-Werror=unused-variable]
  138 |           Node* adj_node = front(adj_nodes);
      |                 ^~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:151:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  151 | int main( int argc, char *argv[] )
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
010eab9
Wed 04 Oct 2023 04:58:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:151:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  151 | int main( int argc, char *argv[] )
      |     ^~~~
Compilation failed
1131226
Wed 04 Oct 2023 05:01:07 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
3ad0f37
Wed 04 Oct 2023 05:01:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
f991d79
Wed 04 Oct 2023 05:04:17 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:52: error: subscripted value is neither array nor pointer nor vector
   71 |               if (subMatrizVerificada[sub_i][sub_j][numero] == 1)
      |                                                    ^
sudoku.c:75:48: error: subscripted value is neither array nor pointer nor vector
   75 |               subMatrizVerificada[sub_i][sub_j][numero] == 1;
      |                                                ^
sudoku.c:50:9: error: variable ‘subMatrizVerificada’ set but not used [-Werror=unused-but-set-variable]
   50 |     int subMatrizVerificada[9][9] = {0};
      |         ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e4f641
Wed 04 Oct 2023 05:40:37 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:75:57: error: statement with no effect [-Werror=unused-value]
   75 |               subMatrizVerificada[sub_i][sub_j][numero] == 1;
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
caf994d
Wed 04 Oct 2023 05:43:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
af99a97
Wed 04 Oct 2023 05:46:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2545a93
Wed 04 Oct 2023 05:46:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
9e383a3
